--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -13,4 +13,4 @@ log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d{dd.MM.yyyy HH:mm} %-5p %c{1}:%L - %m%n
 
 log4j.logger.org.hibernate.SQL=ERROR
-#log4j.logger.org.hibernate.type.descriptor.sql=trace
+#log4j.logger.org.hibernate.status.descriptor.sql=trace
