--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
 .idea/*
 target/*
+out/*
 log/log.txt
-checkman2.iml
 checkman2.iml
 .idea/workspace.xml
 .idea/artifacts/checkman2_war_exploded.xml
-log/log.txt
