--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -13,4 +13,5 @@ log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d{dd.MM.yyyy HH:mm} %-5p %c{1}:%L - %m%n
 
 log4j.logger.org.hibernate.SQL=ERROR
+menu.feedback=\u0417\u0432\u043E\u0440\u043E\u0442\u043D\u0456\u0439 \u0437\u0432\u044F\u0437\u043E\u043A
 #log4j.logger.org.hibernate.status.descriptor.sql=trace
