--- a/client/app/build.gradle
+++ b/client/app/build.gradle
@@ -36,4 +36,8 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'info.guardianproject.netcipher:netcipher:1.2'
     implementation 'com.squareup.okhttp3:okhttp:3.12.1'
+    compile "org.java-websocket:Java-WebSocket:1.4.0"
+    // https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple
+    compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
+
 }
