--- a/client/app/src/main/AndroidManifest.xml
+++ b/client/app/src/main/AndroidManifest.xml
@@ -40,7 +40,8 @@
         </service>
 
         <activity android:name=".activity.EchoActivity" />
-        <activity android:name=".activity.messages.ContactsActivity"></activity>
+        <activity android:name=".activity.messages.ContactsActivity" />
+        <activity android:name=".activity.PasswordRestoreActivity"></activity>
     </application>
 
 </manifest>
