--- a/client/app/src/main/AndroidManifest.xml
+++ b/client/app/src/main/AndroidManifest.xml
@@ -41,7 +41,8 @@
 
         <activity android:name=".activity.EchoActivity" />
         <activity android:name=".activity.messages.ContactsActivity" />
-        <activity android:name=".activity.PasswordRestoreActivity"></activity>
+        <activity android:name=".activity.PasswordRestoreActivity" />
+        <activity android:name=".activity.messages.ChatsActivity"></activity>
     </application>
 
 </manifest>
