--- a/RecurringWork/app/build.gradle
+++ b/RecurringWork/app/build.gradle
@@ -3,13 +3,12 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 29
     defaultConfig {
-        applicationId "ua.quasilin.chekmanszpt"
+        applicationId "quasilin.org.recurringwork"
         minSdkVersion 17
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -21,28 +20,16 @@ android {
         targetCompatibility 1.8
         sourceCompatibility 1.8
     }
-    dexOptions {
-        javaMaxHeapSize "4g"
-    }
 }
 
 dependencies {
-    implementation 'com.tinder.scarlet:scarlet:0.1.9'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation "androidx.work:work-runtime:2.2.0"
+    implementation "androidx.appcompat:appcompat-resources:1.1.0"
+    implementation "androidx.concurrent:concurrent-futures:1.0.0"
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.android.support:support-v4:28.0.0'
-    implementation 'com.android.support:support-vector-drawable:28.0.0'
-    implementation 'com.android.support:design:28.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'com.android.support:support-annotations:28.0.0'
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'info.guardianproject.netcipher:netcipher:1.2'
-    implementation 'com.squareup.okhttp3:okhttp:3.12.1'
-    compile "org.java-websocket:Java-WebSocket:1.4.0"
-    compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
-    compile 'com.android.support:multidex:1.0.3'
-
 }
