--- a/WorkManger/app/src/main/AndroidManifest.xml
+++ b/WorkManger/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         <activity
             android:name=".DealsActivity"
             android:label="@string/title_activity_deals"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
