--- a/WorkManger/app/build.gradle
+++ b/WorkManger/app/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     implementation "androidx.appcompat:appcompat-resources:1.1.0"
     implementation "androidx.concurrent:concurrent-futures:1.0.0"
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.google.android.material:material:1.2.0-alpha03'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
