--- a/WorkManger/app/src/main/AndroidManifest.xml
+++ b/WorkManger/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.kvasik.workmanger">
+    package="com.example.kvasik.workmanager">
 
     <application
         android:allowBackup="true"
@@ -9,17 +9,24 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.MainActivity">
+        <activity android:name="com.example.kvasik.workmanager.activity.ParentActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".activity.DealsActivity"
-            android:label="@string/title_activity_deals"
-            android:theme="@style/AppTheme.NoActionBar" />
+        <!-- <activity -->
+        <!-- android:name=".activity.DealsActivity" -->
+        <!-- android:label="@string/title_activity_deals" -->
+        <!-- android:theme="@style/AppTheme.NoActionBar" /> -->
+        <!-- <activity -->
+        <!-- android:name=".NavigaionActivity" -->
+        <!-- android:label="@string/title_activity_navigaion" -->
+        <!-- android:theme="@style/AppTheme.NoActionBar"></activity> -->
+        <!--<activity-->
+            <!--android:name=".NavigationActivity"-->
+            <!--android:label="@string/title_activity_navigation"-->
+            <!--android:theme="@style/AppTheme"></activity>-->
     </application>
 
 </manifest>
