--- a/WorkManger/app/build.gradle
+++ b/WorkManger/app/build.gradle
@@ -16,14 +16,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    buildToolsVersion '29.0.2'
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation "androidx.work:work-runtime:2.2.0"
-    implementation "androidx.appcompat:appcompat-resources:1.1.0"
-    implementation "androidx.concurrent:concurrent-futures:1.0.0"
+    implementation 'androidx.work:work-runtime:2.2.0'
+    implementation 'androidx.appcompat:appcompat-resources:1.1.0'
+    implementation 'androidx.concurrent:concurrent-futures:1.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.google.android.material:material:1.2.0-alpha03'
     testImplementation 'junit:junit:4.12'
