--- a/server/pom.xml
+++ b/server/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.checkman</groupId>
     <artifactId>checkman</artifactId>
-    <version>1.0</version>
+    <version>2.1.2</version>
     <packaging>war</packaging>
 
     <properties>
@@ -20,6 +20,11 @@
             <version>4.2.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.0</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/javax.websocket/javax.websocket-api -->
         <dependency>
             <groupId>javax.websocket</groupId>
