--- a/server/pom.xml
+++ b/server/pom.xml
@@ -83,7 +83,11 @@
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
-
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.1</version>
+        </dependency>
 
         <!-- https://mvnrepository.com/artifact/com.sun.xml.bind/jaxb-impl -->
         <dependency>
@@ -97,7 +101,6 @@
             <artifactId>jaxb-core</artifactId>
             <version>2.2.11</version>
         </dependency>
-
 
         <!-- https://mvnrepository.com/artifact/javax.activation/activation -->
         <dependency>
