--- a/server/pom.xml
+++ b/server/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.checkman</groupId>
+    <groupId>stanislav.vasilina</groupId>
     <artifactId>checkman</artifactId>
     <version>2.2.34</version>
     <packaging>war</packaging>
@@ -148,6 +148,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
