--- a/spedition/SpeditionClient/app/build.gradle
+++ b/spedition/SpeditionClient/app/build.gradle
@@ -47,6 +47,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.google.android:flexbox:1.1.0'
     implementation 'com.squareup.okhttp3:okhttp:4.7.2'
     implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
     implementation 'androidx.appcompat:appcompat:1.1.0'
