some spedition fixes

--- a/spedition/SpeditionClient/app/build.gradle
+++ b/spedition/SpeditionClient/app/build.gradle
@@ -29,6 +29,7 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         signingConfig signingConfigs.debug
+        vectorDrawables.useSupportLibrary = true
     }
 
     buildTypes {
