--- a/spedition/SpeditionClient/build.gradle
+++ b/spedition/SpeditionClient/build.gradle
@@ -2,6 +2,7 @@ ext {
     var = 'Stas53721456'
     var1 = 'key0'
     var2 = '53721456'
+    defaultVersionCode = 6
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
@@ -12,7 +13,7 @@ buildscript {
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.3'
+        classpath 'com.android.tools.build:gradle:4.0.0'
         
 
         // NOTE: Do not place your application dependencies here; they belong
