--- a/spedition/SpeditionClient/app/src/main/AndroidManifest.xml
+++ b/spedition/SpeditionClient/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 <!--    <uses-permission android:name="android.permission.READ_PHONE_NUMBERS"/>-->
 <!--    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>-->
 <!--    <uses-permission android:name="android.permission.READ_SMS"/>-->
@@ -30,6 +31,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service android:name=".services.SyncService"/>
 <!--        <receiver android:name="ua.svasilina.spedition.receivers.BootReceiver">-->
 <!--            <intent-filter>-->
 <!--                <action android:name="android.intent.action.BOOT_COMPLETED"/>-->
@@ -41,5 +43,6 @@
 <!--                    tools:ignore="BatteryLife" />-->
 <!--            </intent-filter>-->
 <!--        </receiver>-->
+
     </application>
 </manifest>
