--- a/spedition/SpeditionClient/app/src/main/AndroidManifest.xml
+++ b/spedition/SpeditionClient/app/src/main/AndroidManifest.xml
@@ -20,15 +20,18 @@
         android:roundIcon="@drawable/ic_logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:screenOrientation="portrait"
         android:usesCleartextTraffic="true"
         android:networkSecurityConfig="@xml/network_security_config"
         tools:ignore="AllowBackup"
         tools:targetApi="n">
-        <activity android:name="ua.svasilina.spedition.activity.ReportEdit" />
-        <activity android:name="ua.svasilina.spedition.activity.ReportShow" />
-        <activity android:name=".activity.SyncListActivity"/>
-        <activity android:name="ua.svasilina.spedition.activity.Reports">
+        <activity android:name="ua.svasilina.spedition.activity.ReportEdit"
+            android:configChanges="orientation|screenSize"/>
+        <activity android:name="ua.svasilina.spedition.activity.ReportShow"
+            android:configChanges="orientation|screenSize"/>
+        <activity android:name=".activity.SyncListActivity"
+            android:configChanges="orientation|screenSize"/>
+        <activity android:name="ua.svasilina.spedition.activity.Reports"
+            android:configChanges="orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
