--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@ server/src/main/webapp/ext/*
 spedition/untitled/target/*
 *.war
 *.war
+checkman3/.idea
+checkman3/out
+checkman3/target
+checkman3/src/main/web/external
+
