--- a/spedition/SpeditionClient/app/src/main/AndroidManifest.xml
+++ b/spedition/SpeditionClient/app/src/main/AndroidManifest.xml
@@ -28,16 +28,19 @@
             android:configChanges="orientation|screenSize"/>
         <activity android:name="ua.svasilina.spedition.activity.ReportShow"
             android:configChanges="orientation|screenSize"/>
-        <activity android:name=".activity.SyncListActivity"
-            android:configChanges="orientation|screenSize"/>
-        <activity android:name="ua.svasilina.spedition.activity.Reports"
+<!--        <activity android:name=".activity.SyncListActivity"-->
+<!--            android:configChanges="orientation|screenSize"/>-->
+        <activity android:name=".activity.StartActivity"
             android:configChanges="orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name=".services.SyncService"/>
+        <activity android:name="ua.svasilina.spedition.activity.Reports"
+            android:configChanges="orientation|screenSize">
+        </activity>
+<!--        <service android:name=".services.SyncService"/>-->
 <!--        <receiver android:name="ua.svasilina.spedition.receivers.BootReceiver">-->
 <!--            <intent-filter>-->
 <!--                <action android:name="android.intent.action.BOOT_COMPLETED"/>-->
