--- a/spedition/SpeditionClient/app/build.gradle
+++ b/spedition/SpeditionClient/app/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'org.jetbrains:annotations-java5:15.0'
+    implementation 'androidx.work:work-runtime:2.4.0'
 
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
