--- a/spedition/SpeditionClient/app/src/main/AndroidManifest.xml
+++ b/spedition/SpeditionClient/app/src/main/AndroidManifest.xml
@@ -40,12 +40,15 @@
         <activity android:name="ua.svasilina.spedition.activity.Reports"
             android:configChanges="orientation|screenSize">
         </activity>
-<!--        <service android:name=".services.SyncService"/>-->
-<!--        <receiver android:name="ua.svasilina.spedition.receivers.BootReceiver">-->
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.BOOT_COMPLETED"/>-->
-<!--            </intent-filter>-->
-<!--        </receiver>-->
+        <service
+            android:name=".services.ActiveReportService"
+            android:enabled="true"/>
+        <!--        <service android:name=".services.SyncService"/>-->
+        <receiver android:name="ua.svasilina.spedition.receivers.BootReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+            </intent-filter>
+        </receiver>
 <!--        <receiver android:name="ua.svasilina.spedition.receivers.OnConnectReceiver">-->
 <!--            <intent-filter>-->
 <!--                <action android:name="android.net.conn.CONNECTIVITY_CHANGE"-->
