--- a/spedition/untitled/src/main/resources/log4j.properties
+++ b/spedition/untitled/src/main/resources/log4j.properties
@@ -6,7 +6,7 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{dd.MM.yyyy HH:mm} %-5p %c{1}:%L %m%n
 
 log4j.appender.file=org.apache.log4j.RollingFileAppender
-log4j.appender.file.File=${log}/${tomcat.hostname}/spedition_%d{dd.mm.yyyy}.txt
+log4j.appender.file.File=${log}/${tomcat.hostname}/spedition.txt
 log4j.appender.file.MaxFileSize=8192KB
 log4j.appender.file.MaxBackupIndex=10
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
