more report fields dev

--- a/spedition/SpeditionClient/app/src/main/AndroidManifest.xml
+++ b/spedition/SpeditionClient/app/src/main/AndroidManifest.xml
@@ -40,6 +40,7 @@
         <activity android:name="ua.svasilina.spedition.activity.Reports"
             android:configChanges="orientation|screenSize">
         </activity>
+        <activity android:name=".activity.TablesActivity" android:configChanges="orientation|screenSize"/>
         <service
             android:name=".services.ActiveReportService"
             android:enabled="true"/>
