--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@ target/*
 out/*
 log/log.txt
 checkman2.iml
-.idea/workspace.xml
-.idea/artifacts/checkman2_war_exploded.xml
-.idea/libraries/*
+#.idea/workspace.xml
+#.idea/artifacts/checkman2_war_exploded.xml
+#.idea/libraries/*
+/commiter.sh
+log/*
+src/main/webapp/ext
